# SANA-FE

./: .clang-tidy  CMakeLists.txt  README.md  llm.txt  pyproject.toml  setup.py
.github/workflows/: build_wheels.yaml  cmake-multi-platform.yml  cpp-check.yml  pylint.yml
docs/: api.rst  conf.py  models.rst
plugins/: CMakeLists.txt  neurofem.cpp
sanafe/: __init__.py  _examples.py  data.py  fugu.py  lava.py  layers.py  tutorial.py
sanafe/viz/: performance.py  potential.py  raster.py  styles.py
src/: arch.cpp  arch.hpp  arg_parsing.cpp  chip.cpp  core.cpp  docstrings.hpp  main.cpp  mapped.cpp  mapped.hpp  message.cpp  models.cpp  models.hpp  netlist.cpp  network.cpp  network.hpp  pipeline.cpp  pipeline.hpp  plugins.cpp  print.hpp  pymodule.cpp  pytrace.cpp  schedule.cpp  utils.cpp  yaml_arch.cpp  yaml_common.cpp  yaml_snn.cpp  yaml_snn.hpp
tests/: CMakeLists.txt  build_msvc.bat
tests/ci/: check_perf.rb  check_python.rb  check_windows.rb  run.rb
tests/python/: test.py
tests/unit/: .clang-tidy  CMakeLists.txt  test_yaml_snn.cpp
